--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "rollup-plugin-polyfill-node": "^0.9.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^5.3.3",
     "vitest": "^1.2.0",
     "vitest-fetch-mock": "^0.2.2"
   },
