chore: replace babel-eslint with @typescript-eslint/parser

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-replace": "^3.0.0",
     "@testing-library/react": "^14.0.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "babel-eslint": "^10.0.1",
     "babel-plugin-add-module-exports": "^1.0.0",
     "canvas": "^2.11.2",
     "chalk": "^2.4.2",
