--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,7 @@
     "react/jsx-props-no-spreading": 0,
     "react/destructuring-assignment": 0,
     "import/extensions": 0,
-    "import/no-unresolved": ["error", { "ignore": ["^yoga-layout"] }]
+    "import/no-unresolved": [2, { "ignore": ["^yoga-layout"] }]
   },
   "overrides": [
     {
