--- a/packages/image/package.json
+++ b/packages/image/package.json
@@ -33,7 +33,8 @@
     "@babel/runtime": "^7.20.13",
     "@react-pdf/png-js": "^2.3.1",
     "cross-fetch": "^3.1.5",
-    "jay-peg": "^1.0.0"
+    "jay-peg": "^1.0.0",
+    "pngjs": "^7.0.0"
   },
   "files": [
     "lib"
