--- a/packages/pdfkit/package.json
+++ b/packages/pdfkit/package.json
@@ -43,6 +43,7 @@
     "crypto-js": "^4.2.0",
     "fontkit": "^2.0.2",
     "jay-peg": "^1.0.0",
+    "pngjs": "^7.0.0",
     "vite-compatible-readable-stream": "^3.6.1"
   },
   "devDependencies": {
